- change name of container to include index to make it unique accross the cluster - jmxconfig is now a template again :)

--- a/scripts/jmxconfig.yml.tmpl
+++ b/scripts/jmxconfig.yml.tmpl
@@ -2,7 +2,7 @@
 startDelaySeconds: 0
 username:
 password:
-jmxUrl: service:jmx:rmi:///jndi/rmi://kafka:5555/jmxrmi
+jmxUrl: service:jmx:rmi:///jndi/rmi://${container_name}:5555/jmxrmi
 ssl: false
 lowercaseOutputLabelNames: true
 lowercaseOutputName: true
